[gd_scene load_steps=3 format=2]

[ext_resource path="res://Asteroids/Asteroid.png" type="Texture" id=1]
[ext_resource path="res://Asteroids/Asteroid.gd" type="Script" id=2]

[node name="Asteroid" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LaserHitArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="LaserHitCollision" type="CollisionPolygon2D" parent="LaserHitArea"]
polygon = PoolVector2Array( 0, -54, -26, -42, -31, -25, -51, 0, -50, 27, -21, 41, 9, 33, 28, 45, 55, 44, 49, 9, 57, -23, 50, -35, 30, -46, 23, -55 )

[node name="CargoShipCollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CargoShipCollision" type="CollisionPolygon2D" parent="CargoShipCollisionArea"]
polygon = PoolVector2Array( -1, -59, -30, -47, -37, -27, -56, -3, -54, 34, -21, 48, 9, 42, 27, 51, 61, 49, 56, 9, 62, -26, 55, -38, 33, -51, 28, -60 )

[node name="AsteroidCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, -59, -30, -47, -37, -27, -56, -3, -54, 34, -21, 48, 9, 42, 27, 51, 61, 49, 56, 9, 62, -26, 55, -38, 33, -51, 28, -60 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3, -4.5 )
scale = Vector2( 5.2, 4.95 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast1" type="RayCast2D" parent="RayCasts"]
position = Vector2( 62, -56 )
enabled = true
cast_to = Vector2( 62, 0 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2" type="RayCast2D" parent="RayCasts"]
position = Vector2( -61, 43 )
enabled = true
cast_to = Vector2( 62, 0 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast3" type="RayCast2D" parent="RayCasts"]
position = Vector2( 64, 52 )
enabled = true
cast_to = Vector2( 62, 0 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast4" type="RayCast2D" parent="RayCasts"]
position = Vector2( -59, -59 )
enabled = true
cast_to = Vector2( 62, 0 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[connection signal="area_entered" from="LaserHitArea" to="." method="_on_LaserHitArea_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
